# pixi

./: CONTRIBUTING.md  Cargo.toml  pixi.toml
crates/pixi_manifest/src/: task.rs
docs/reference/: cli.md
examples/complex-pyproject/: pyproject.toml
examples/docker/: pyproject.toml
examples/many-tasks/: pyproject.toml
examples/my_example/: pyproject.toml
examples/myexample/: pyproject.toml
src/cli/: add.rs  install.rs  list.rs  task.rs
src/project/: environment.rs
src/project/manifest/: feature.rs
src/task/: mod.rs
tests/pyproject_example/example_1/: pyproject.toml
tests/pyproject_example/example_1_pixi-toml/: pixi.toml
