#--------------------------------------------------------------------------------------------------#
######################################### Package Config ###########################################
#__________________________________________________________________________________________________#
[project]
name = "testmypixipkg"
version = "0.19.0"
description = "Add a short description here"
license = "MIT"

requires-python = ">= 3.11"
dependencies = ["rich", "rich-click", "numpy"]

[project.scripts]
pypkg = "testmypixipkg.__main__:say_hello"
test_func = "testmypixipkg.cli:test_func"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#--------------------------------------------------------------------------------------------------#
############################################## PIXI ################################################
#__________________________________________________________________________________________________#
[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]
# platforms = ["osx-arm64", "linux-64", "win-64", "osx-64"]

[tool.pixi.dependencies]
pandas = ">=2.2.2,<2.3"

[tool.pixi.pypi-dependencies]
# testmypixipkg = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = [
  "test",
  "style",
  "docs",
  "verify",
], solve-group = "default" }
publish = { features = [
  "pkgbuild",
  "release",
], solve-group = "default" }
py310 = ["py310", "test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]

[tool.pixi.tasks]
hello = ' echo "Hello World!" '

############################################## python ###############################################

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

############################################## TEST ################################################
[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[tool.pixi.feature.test.tasks.test]
cmd = [
  "pytest",
  "--numprocesses=auto",
  "-s",
  "--verbose",
  "--cov=testmypixipkg",
  "--cov-report=xml:coverage-report/coverage.xml",
]
inputs = ["src", "tests"]
outputs = ["coverage-report/coverage.xml"]
description = "Runs pytest with coverage"

############################################## STYLE ###############################################
# See ruff.toml for the configuration
[tool.pixi.feature.style.dependencies]
ruff = "*"

[tool.pixi.feature.style.tasks]
style = { cmd = "ruff check src", inputs = ["src"] }

############################################## DOCS ################################################
# Available tasks: doc-build, doc-serve, doc-deploy

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"

[tool.pixi.feature.docs.tasks.build]
cmd = "echo 'mkdocs build -f mkdocs.yaml'"
inputs = ["docs"]
outputs = ["site"]
description = "Builds the documentation"

[tool.pixi.feature.docs.tasks.serve]
cmd = "echo 'mkdocs serve -f mkdocs.yaml'"
inputs = ["docs"]
description = "Serves the documentation on localhost"

[tool.pixi.feature.docs.tasks.deploy]
cmd = "echo 'mkdocs gh-deploy -f mkdocs.yaml --force'"
inputs = ["docs"]
description = "Deploys the documentation to GitHub Pages"

############################################## VERIFY #############################################
[tool.pixi.feature.verify.dependencies]
pre-commit = ">=3.7.1,<3.8"
pre-commit-hooks = ">=4.6.0,<4.7"
mypy = ">=1.10.0,<1.11"

[tool.pixi.feature.verify.tasks]
verify = { cmd = "pre-commit run --all-files", inputs = ["src", "tests"] }

#################################### RELEASE, BUILD, DOCKER #######################################
[tool.pixi.feature.release.dependencies]
python-semantic-release = ">=8.5.1"

[tool.pixi.feature.release.tasks]
# Semver task will only work on the main or dev/develop branch (see releaserc.toml:branches)
semver = 'echo "Next Version is: $(semantic-release -c releaserc.toml version --print)"'
deploy = { cmd = "semantic-release -c releaserc.toml version", description = "Deploys a release to GitHub" }

[tool.pixi.feature.pkgbuild.dependencies]
hatch = "*"

[tool.pixi.feature.pkgbuild.tasks]
# Builds the package and publishes it to the test.pypi.org repository
build = { cmd = "echo 'hatch build --clean'", inputs = [
  "src",
], outputs = [
  "dist/*",
], description = "Builds the package using hatch" }

publish-pypi = { cmd = "echo 'hatch publish --yes --repo main'", inputs = [
  "dist/*",
  "hatch.toml",
], depends-on = [
  "build",
], description = "Publishes the package to the main PyPI repository" }

publish-test = { cmd = "echo 'hatch publish --yes --repo test'", inputs = [
  "dist/*",
  "hatch.toml",
], depends-on = [
  "build",
], description = "Publishes the package to the test.pypi.org repository" }
