[project]
authors = [{ name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com" }]
dependencies = []
description = "Add a short description here"
name = "example_1"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
example_1 = { path = ".", editable = true }

[tool.pixi.tasks]

# expected
# [tool.pixi.target.win-64.pypi-dependencies]
